# effectb

./: .gitignore  Dockerfile  Procfile  README.md  compose.yaml  effectBot.py  pyproject.toml  quotes.txt  requirements.txt  tools.py
Cogs/: Administrative.py  Audio.py  Chat.py  Components.py  IMDb.py  TTS.py  Utility.py
